--- a/static/dashboards/index.html
+++ b/static/dashboards/index.html
@@ -16,6 +16,8 @@
 
 <script type="text/javascript">
 
+var gadgets;
+
 function requestNewDashboard() {
   $.ajax({
     url: '/newDashboard/',
@@ -33,6 +35,9 @@ jQuery(function($) {
 
    $(".toRight").click(function() {
      $("#cube").trigger("cube", "right")
+     $.ajax({
+     'url': '/gadgets/',
+     success: populateGadgetsList });
    });
 
    $(".toFront").click(function() {
@@ -43,11 +48,28 @@ jQuery(function($) {
       requestNewDashboard();
     });
     
-  $("#gadgets li").click( function(){
-    $("#name").html($(this).find("input").get(0).value);
-  }); 
-    
 })
+
+function populateGadgetsList(gadgetsList){
+ var entryHtml;  
+ gadgets = gadgetsList; 
+ $("#gadgetsList").empty();
+ for (id in gadgetsList){
+   if(gadgetsList.hasOwnProperty(id)){
+     entryHtml = '<li><input type="checkbox" value="' + gadgetsList[id].name + 'name="gadget" value="' + id + '" id="' + id + '"><label>' + gadgetsList[id].name + '</label></li>';
+     $("#gadgetsList").append(entryHtml);
+   } 
+ }
+ 
+ $("#gadgetsList li").click( function(){
+    var selectedId = $(this).find("input").get(0).id;
+    $("#gadgetName").html(gadgets[selectedId].name);
+    $("#gadgetDescription").html(gadgets[selectedId].description);
+    $("#gadgetAuthor").html(gadgets[selectedId].author);
+    $("#gadgetVersion").html(gadgets[selectedId].version);
+  });
+ 
+}
 
 </script>
 
@@ -121,7 +143,7 @@ jQuery(function($) {
   background-image: url(/images/departmentLogo.png);
 }
 
-#gadgets{
+#gadgetsList{
   margin-top: 25px; 
   margin-bottom: 10px; 
   height: 370px; 
@@ -129,25 +151,25 @@ jQuery(function($) {
   width: 100%;
 }
 
-#gadgets li{
+#gadgetsList li{
   padding-bottom: 10px;
   padding-left: 5px;
   margin-bottom: 10px;
   margin-right: 10px;
 }
 
-#gadgets li:hover{
+#gadgetsList li:hover{
   background: #c4bedd;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
 }
 
-#gadgets input{
+#gadgetsList input{
   padding-left: 5px;
 }
 
-#gadgets label{
+#gadgetsList label{
   font-size: 15px;
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -173,36 +195,23 @@ jQuery(function($) {
         <div id="gadgetSelection" style="width:25%; padding: 15px; float: left">
           <h2>Choose your gadgets:</h2>
           <form action="#" method="get">   
-            <ul id="gadgets">
-              <li><input type="checkbox" value="Data Inquirer" name="gadget" value="dataInquirer" id="dataInquirer"><label>Data Inquirer</label></li>
-              <li><input type="checkbox" value="Sky View" name="gadget" id="skyView"><label>Sky View</label></li>
-              <li><input type="checkbox" value="Table View"><label>Table View</label></li>
-               <li><input type="checkbox" value="Data Inquirer"><label>Data Inquirer</label></li>
-                <li><input type="checkbox" value="Sky View"><label>Sky View</label></li>
-                <li><input type="checkbox" value="Table View"><label>Table View</label></li>
-                 <li><input type="checkbox" value="Data Inquirer"><label>Data Inquirer</label></li>
-                  <li><input type="checkbox" value="Sky View"><label>Sky View</label></li>
-                  <li><input type="checkbox" value="Table View"><label>Table View</label></li>
-                   <li><input type="checkbox" value="Data Inquirer"><label>Data Inquirer</label></li>
-                    <li><input type="checkbox" value="Sky View"><label>Sky View</label></li>
-                    <li><input type="checkbox" value="Table View"><label>Table View</label></li>
-            </ul>
+            <ul id="gadgetsList"></ul>
           </form>
           <button class="big toFront">Start Dashboard</button>
         </div> 
         <div id="gadgetDetails" style="width:63%; padding: 70px 30px 0px 0px; float: right;">
-          <h2 id="name">Gadget Name</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+          <h2 id="gadgetName">Gadget Name</h2>
+          <p id="gadgetDescription">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
           <dl>
             <dt>Author:</dt>
-            <dd id="author">XXX</dd>
+            <dd id="gadgetAuthor">XXX</dd>
           </dl>
           <dl>
             <dt>Version:</dt>
-            <dd id="version">XXX</dd>
+            <dd id="gadgetVersion">XXX</dd>
           </dl>  
         </div>    
         <footer><a href="http://www.astro.washington.edu/" id="departmentLogo"></a></footer>
