--- a/static/dashboards/index.html
+++ b/static/dashboards/index.html
@@ -67,6 +67,7 @@ function populateGadgetsList(gadgetsList){
     $("#gadgetDescription").html(gadgets[selectedId].description);
     $("#gadgetAuthor").html(gadgets[selectedId].author);
     $("#gadgetVersion").html(gadgets[selectedId].version);
+    $("#gadgetDetails").css("display","block");
   });
  
 }
@@ -199,19 +200,16 @@ function populateGadgetsList(gadgetsList){
           </form>
           <button class="big toFront">Start Dashboard</button>
         </div> 
-        <div id="gadgetDetails" style="width:63%; padding: 70px 30px 0px 0px; float: right;">
-          <h2 id="gadgetName">Gadget Name</h2>
-          <p id="gadgetDescription">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+        <div id="gadgetDetails" style="width:63%; padding: 70px 30px 0px 0px; float: right; display: none">
+          <h2 id="gadgetName"></h2>
+          <p id="gadgetDescription"></p>
           <dl>
             <dt>Author:</dt>
-            <dd id="gadgetAuthor">XXX</dd>
+            <dd id="gadgetAuthor"></dd>
           </dl>
           <dl>
             <dt>Version:</dt>
-            <dd id="gadgetVersion">XXX</dd>
+            <dd id="gadgetVersion"></dd>
           </dl>  
         </div>    
         <footer><a href="http://www.astro.washington.edu/" id="departmentLogo"></a></footer>
